[profile.release]
panic = "unwind"

[workspace]
default-members = [
    "primitives/*",
    "frame/*",
    "client/*",
]

members = [
    "primitives/consensus",
    "primitives/evm",
    "primitives/rpc",
    "frame/dynamic-fee",
    "frame/ethereum",
    "frame/evm",
    "frame/evm/precompile/blake2",
    "frame/evm/precompile/bn128",
    "frame/evm/precompile/dispatch",
    "frame/evm/precompile/ed25519",
    "frame/evm/precompile/modexp",
    "frame/evm/precompile/simple",
    "client/consensus",
    "client/rpc",
    "client/rpc-core",
]