[package]
name = "ac-consensus"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sc-client-api = { version = "3.0.0" }
sp-block-builder = { version = "3.0.0" }
sp-inherents = { version = "3.0.0" }
ap-consensus = { path = "../../primitives/consensus" }
sp-consensus = { version = "0.9.0" }
ap-rpc = { path = "../../primitives/rpc" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { version = "3.0.0" }
derive_more = "0.99.2"
prometheus-endpoint = { version = "0.9.0", package = "substrate-prometheus-endpoint"}