[package]
name = "ac-rpc-core"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
jsonrpc-pubsub = "15.0.0"
rustc-hex = "2.1.0"
ethereum-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"