[package]
name = "ac-rpc"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
ethereum-types = "0.11.0"
ac-consensus = { path = "../consensus" }
ac-rpc-core = { path = "../rpc-core" }
ap-rpc = { path = "../../primitives/rpc" }
sp-io = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sp-transaction-pool = { version = "3.0.0" }
sc-transaction-graph = { version = "3.0.0" }
sp-storage = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sc-service = { version = "0.9.0" }
sc-client-api = { version = "3.0.0" }
sc-rpc = { version = "3.0.0" }
sc-network = { version = "0.9.0" }
pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
ethereum = { version = "0.7.1", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"

[features]
rpc_binary_search_estimate = []