[package]
name = "ap-evm"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }
impl-trait-for-tuples = "0.1"

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-std/std",
    "serde",
    "codec/std",
    "evm/std",
    "evm/with-serde",
]