[package]
name = "ap-rpc"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = { version = "3.0.0-dev", default-features = false }
sp-api = { version = "3.0.0-dev", default-features = false }
ap-evm = { default-features = false, path = "../../primitives/evm" }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0-dev", default-features = false }
sp-std = { version = "3.0.0-dev", default-features = false }
sp-io = { version = "3.0.0-dev", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-api/std",
    "ap-evm/std",
    "ethereum/std",
    "ethereum-types/std",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]