[package]
name = "pallet-evm-precompile-dispatch"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2018"

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
pallet-evm = { default-features = false, path = "../.." }
ap-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"ap-evm/std",
	"evm/std",
	"codec/std",
]
