[package]
name = "pallet-evm-precompile-ed25519"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2021"

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
ap-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }
ed25519-dalek = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"ap-evm/std",
	"evm/std",
	"ed25519-dalek/std",
]
