[package]
name = "pallet-evm-precompile-modexp"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2021"

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
ap-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }
num = { version = "0.3", features = ["alloc"], default-features = false }

[dev-dependencies]
hex = "0.4.0"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"ap-evm/std",
	"evm/std",
	"num/std",
]
