[package]
name = "pallet-evm-precompile-simple"
version = "0.1.0"
authors = ["hercules-network"]
edition = "2018"

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
ap-evm = { default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }
ripemd160 = { version = "0.9", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"ap-evm/std",
	"evm/std",
	"ripemd160/std",
]
